notesapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notesapp
  labels:
    app: notesapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notesapp
  template:
    metadata:
      labels:
        app: notesapp
    spec:
      containers:
        - name: notesapp
          image: basiratsk/notesapp
          ports:
            - containerPort: 80
