notesapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  labels:
    app: notesapp
spec:
  type: NodePort
  selector:
    app: notesapp
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
